Clean up: remove PDFs, simplify README, remove tool citations
- Removed all PDF files from repo (too large)
- Updated .gitignore to exclude PDFs
- Rewrote README to sound more natural/less AI
- Removed citations to Python tools (numpy, matplotlib, etc.)
- Kept only meaningful academic references
- Bibliography now focuses on actual research papers

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ Thumbs.db
 # Data files (too large)
 warehouse_report/mc_samples.csv
 
+# PDFs (too large for git)
+*.pdf
+
 # Keep the visualizations and smaller CSVs
 !warehouse_report/*.png
 !warehouse_report/summary_results.csv
